R8 - bundle request dates (#23)
* ArchivedBundleRequest

* business logic

* indentation

* added some tests

* code smells

* coverage

* rebase

* duplication

* ready

* fix archived entity

* fix models

* fix repository

* fix